# noatun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tlcontext.c  update_docs.sh
.github/workflows/: clippy.yml  miri.yml  rust.yml  visualizer.yml
benches/: meta.rs
book/: book.md
db_bench/: Cargo.toml
db_bench/src/: key_value_store.rs  main.rs  model.rs  noatun_bench.rs  noatun_helper.rs  sqlite_bench.rs  tests.rs  warehouse.rs
db_bench/src/key_value_store/: key_value_model.rs  key_value_noatun.rs  key_value_sqlite.rs
db_bench/src/warehouse/: model.rs  noatun_bench.rs  sqlite_bench.rs  tests.rs
doc_helper/: .gitignore  Cargo.toml  docs-svg.md
doc_helper/src/: main.rs
docs/: book.md  docs.md
examples/: db_app.rs  example_db_app.rs  issue_tracker.rs  simple_db.rs  simple_ratatui_ui.rs  simple_replication.rs
icon/: noatun.xcf
src/: backing_store.rs  boot_checksum.rs  buffer.rs  communication.rs  cutoff.rs  data_types.rs  database.rs  diagnostics.rs  disk_abstraction.rs  disk_access.rs  distributor.rs  docs-svg.md  dummy_term_colors.rs  lib.rs  message_store.rs  mini_pather.rs  new_tracking_strategy.md  noatun_instant.rs  on_disk_message_store.rs  platform_specific.rs  projection_store.rs  projector.rs  ratatui_inspector.rs  sequence_nr.rs  sha2_helper.rs  simple_metrics.rs  term_colors.rs  test_metrics.rs  tests.rs  undo_store.rs  update_head_tracker.rs  xxh3_vendored.rs
src/buffer/: message_dependency_tracker.rs
src/communication/: size_limit_vec_deque.rs  udp.rs
src/data_types/: noatun_cell.rs  noatun_hash_impls.rs  noatun_hash_map.rs  noatun_option.rs  noatun_string.rs  noatun_vec.rs
src/mini_pather/: known_good_mini_pather.rs
src/projection_store/: message_dependency_tracker.rs
src/snapshots/: noatun__message_store__tests__add_and_delete_messages.snap  noatun__message_store__tests__add_and_delete_some_messages.snap  noatun__message_store__tests__add_and_read_messages_twice.snap  noatun__tests__distributor_tests__distributor-2.snap  noatun__tests__distributor_tests__distributor-3.snap  noatun__tests__distributor_tests__distributor-4.snap  noatun__tests__distributor_tests__distributor-5.snap  noatun__tests__distributor_tests__distributor.snap
src/tests/: all_up_sync_test.rs  distributor_tests.rs  fuzz_test_insert.rs  recovery_tests.rs  test_driver.rs  test_issue_tracker.rs  test_rotation.rs  test_subsumption.rs  test_subsumption_hashmap.rs  test_subsumption_map_advanced.rs  test_subsumption_nonlocal.rs  test_subsumption_nonlocal_opaque.rs  test_subsumption_vec.rs  test_types_rewind.rs  tests_using_noatun_object_macro.rs
src/tests/snapshots/: noatun__tests__all_up_sync_test__all_up_clock_mismatch_test.snap  noatun__tests__all_up_sync_test__all_up_general_update_sync_test_impl.snap  noatun__tests__all_up_sync_test__all_up_general_update_sync_test_old_messages_all.snap  noatun__tests__all_up_sync_test__all_up_gradual_update_sync_test.snap  noatun__tests__all_up_sync_test__all_up_huge_desynced_test.snap  noatun__tests__all_up_sync_test__all_up_simple_sync_test.snap  noatun__tests__all_up_sync_test__all_up_three_node_partial_resync1-2.snap  noatun__tests__all_up_sync_test__all_up_three_node_partial_resync1.snap  noatun__tests__all_up_sync_test__complex_forwarding_test.snap  noatun__tests__distributor_tests__distributor-2.snap  noatun__tests__distributor_tests__distributor-3.snap  noatun__tests__distributor_tests__distributor.snap  noatun__tests__test_issue_tracker__all_up_issue_tracker_repro1.snap  noatun__tests__test_issue_tracker__all_up_simple_sync_test.snap  noatun__tests__test_issue_tracker__issue_tracker2.snap
tests/: test_app1.rs  test_sync.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
