[package]
name = "noatun"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bench]]
name = "meta"
harness = false


# The `foo` package will use the -Copt-level=3 flag.
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.bytemuck]
opt-level = 3
[profile.dev.package.byteorder]
opt-level = 3

[dependencies]
byteorder = "1.5"
bytemuck = { version = "1.20", features = ["derive"] }
sha2 = "0.10"
indexmap = "2.7"
bumpalo = "3.16"
memmap2 = {version ="0.9"}
anyhow = "1.0"
fs2 = "0.4"
savefile = {  version = "0.18", path ="../savefile/savefile"}
savefile-derive = { version = "0.18"}
serde_derive = "1.0"
serde = "1.0"
libc = "0.2.169"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.39"
tokio = { version = "1.43", features = ["full", "sync", "test-util"], optional = true }
socket2 = "0.5.8"
tracing = "0.1.41"
paste="1.0"
bytes = "1.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
arrayvec = "0.7.6"
memchr = "2.7.4"

[dev-dependencies]
divan  = "0.1"
savefile = {  version = "0.18", path ="../savefile/savefile"}
savefile-derive = "0.18"
noatun = { path = ".", features = ["tokio"] }
datetime_literal = "0.1.3"
insta = "1.42"
arcshift = { version = "0.3.1", path = "../arcshift/arcshift" }
