[package]
name = "noatun"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bench]]
name = "meta"
harness = false

# The `foo` package will use the -Copt-level=3 flag.
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.byteorder]
opt-level = 3
[profile.dev.package.memchr]
opt-level = 3

[features]
debug = ["colored"]
expensive_tests = []

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
indexmap = "2.7"
anyhow = "1.0"
fs2 = "0.4"
savefile = {  version = "0.18", path ="../savefile/savefile"}
savefile-derive = { version = "0.18"}
serde_derive = "1.0"
serde = "1.0"
libc = "0.2.169"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.39"
tokio = { version = "1.43", features = ["full", "sync", "test-util"], optional = true }
socket2 = "0.5.8"
tracing = "0.1.41"
paste="1.0"
bytes = "1.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
arrayvec = "0.7.6"
memchr = "2.7.4"
colored = { version = "3.0.0", optional = true}
itertools = "0.14.0"
smallvec = "1.14.0"
arcshift = { version = "0.4.0", path = "../arcshift/arcshift" }
datetime_literal = "0.1.3"

[dev-dependencies]
divan  = "0.1"
noatun = { path = ".", features = ["tokio"] }
insta = "1.42"
proptest = "1.7"