[package]
name = "noatun"
version = "0.1.3"
edition = "2021"
resolver = "2"
rust-version = "1.87"
repository = "https://github.com/avl/noatun"
license = "MIT"
description = "Noatun is an in-process, distributed database with materialized view support."
keywords = ["database", "distributed", "event-sourcing", "replication", "crdt"]
categories = ["database", "network-programming", "data-structures"]
homepage = "https://github.com/avl/noatun"


[[bench]]
name = "meta"
harness = false

[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.byteorder]
opt-level = 3
[profile.dev.package.memchr]
opt-level = 3



[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:socket2"]
debug_color = ["dep:colored"]
debug = []
expensive_tests = []
serde = ["dep:serde", "serde_derive"]
postcard = ["dep:postcard", "serde_derive", "serde"]

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
indexmap = "2.7"
anyhow = "1.0"
savefile = {  version = "0.20.1"}
savefile-derive = { version = "0.20.1"}
serde_derive = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
libc = "0.2.169"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.39"
tokio = { version = "1.43", features = ["full", "sync", "test-util"], optional = true }
socket2 = { version = "0.6.0", optional = true }
tracing = "0.1.41"
paste = "1.0"
bytes = "1.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
arrayvec = "0.7.6"
memchr = "2.7.4"
colored = { version = "3.0.0", optional = true}
itertools = "0.14.0"
arcshift = { version = "0.4.0"}
datetime_literal = "0.1.3"
postcard = { version = "1.1", features = ["use-std"], optional = true }
metrics = "0.24.2"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"], optional = true }

[target.'cfg(unix)'.dependencies]
fs2 = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[dev-dependencies]
divan  = "0.1"
noatun = { path = ".", features = ["tokio", "serde", "postcard", "ratatui"] }
insta = "1.42"
proptest = "1.7"
serde_derive = { version = "1.0"}
serde = { version = "1.0"}
postcard = { version = "1.1", features = ["use-std"] }
tui-textarea = "0.7.0"
flexi_logger = { version = "0.31.2", features = ["trc"] }
