[package]
name = "db_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = {version = "0.32", features = ["bundled"] }
rand = { version = "0.8", features = ["small_rng"] }
noatun = { path = ".." }
indexmap = "2.9"
savefile = {  version = "0.19.0"}
savefile-derive = { version = "0.19.0"}
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"