[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.86"

[dependencies]
egui = "0.31"
eframe = "0.31"
noatun = {path = "..", features = ["tokio"]}
anyhow = "1.0"
bytes = "1.10"
tokio = { version = "1.44", features = ["full"] }
savefile = {path = "../../savefile/savefile", features = ["emath", "ecolor"]}
serde = "1.0"
