[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.86"

[dependencies]
egui = "0.31"
eframe = "0.31"
noatun = {path = ".."}
anyhow = "1.0"
bytes = "1.10"
savefile = {version = "0.20.1", features = ["emath", "ecolor"]}
serde = "1.0"
arcshift = { version = "0.4.0"}
datetime_literal = "0.1.3"